# codesync

./: package-lock.json
backend/: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
backend/app/: app.py  utls.py
backend/app/StateTracker/: ActivityFeed.py  FileCache.py  FileStates.py  GitMock.py  GithubAPI.py  RepoManager.py  __init__.py
backend/app/StateTracker/tests/: test_repo_manager.py
backend/app/auth/: jwt.py
backend/app/db/: db.py
backend/app/db/models/: __init__.py  models.py
backend/app/middleware/: auth_middleware.py
backend/app/routers/: auth.py
backend/app/routes/: activity.py  auth.py  user_repos.py  webhooks.py
codesync/: package-lock.json  package.json
codesync/src/: auth.ts  extension.ts  fileWatcher.ts  git.ts  socket.ts
extension/codesync/: README.md  package-lock.json  package.json
extension/codesync/src/: extension.ts
frontend/: package-lock.json  package.json
frontend/src/: App.js  AppRouter.js  api.js  global.css  index.css  index.js
frontend/src/components/: ConnectRepoPage.js  RepoDetailsPage.js  ReposPage.js  RootPage.js
frontend/src/components/flow/: FlowInner.js
frontend/src/components/flow/edges/: FloralEdge.js
frontend/src/components/flow/nodes/: FileNode.js  FolderNode.js  RootNode.js
frontend/src/components/ui/: BranchHealthBar.js  SearchBar.js  StatsBar.js  ViewerStack.js
frontend/src/constants/: flowConstants.js
frontend/src/hooks/: useActiveViewers.js
frontend/src/pages/: RepoDetailsPage.js  ReposPage.js  RootPage.js
frontend/src/utils/: graphHelpers.js  iconHelpers.js
