[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "merge3>=0.0.16",
    "psycopg>=3.3.3",
    "pyjwt[cryptography]>=2.11.0",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-orm>=1.2.10",
    "whatthepatch>=1.0.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
